--- a/app/frontend/my-app/app/styles/dashboard.css
+++ b/app/frontend/my-app/app/styles/dashboard.css
@@ -1,6 +1,3 @@
 .rectangle{
-    background-color: aliceblue; height: 40vh;
-}
-html{
-    width: 100vw; overflow-x: hidden;
+    background-color: rgb(121, 121, 121); height: 45vh; margin: 10px;
 }
