--- a/app/frontend/my-app/app/styles/dashboard.css
+++ b/app/frontend/my-app/app/styles/dashboard.css
@@ -49,10 +49,21 @@
     display: flex; justify-content: center;
 }
 .account_bot{
- padding-top: 2.5vh;
+ padding-top: 2vh; display: flex; align-items: center; 
+}
+.info_left{
+ width: 65%; border: 1px solid red;
+}
+.photo_right{
+    border: 1px solid red; width: 35%; 
 }
 .edit_icon_dash{
-    position: absolute; right: 10; top: 10;
+    position: absolute; right: 10; top: 10; cursor: pointer;border-radius: 4px;
+    background-color: rgb(214, 208, 190);
+
+}
+.edit_icon_dash:hover{
+    background-color: rgb(185, 175, 157); 
 
 }
 /*********************Square 4*************************/
@@ -65,3 +76,71 @@
 
 }
 
+/*********************** PROFILE MODAL **************************/
+
+#profile_modal_bg{
+    background-color: rgba(0, 0, 0, 0.29); position: absolute; left: 50%;
+     top: 50%; transform: translate(-50%, -50%); height: 100vh; 
+    width: 100vw; display: none;
+}
+.profile_modal{
+    position: absolute; left: 50%; width: 50vw; height: 80vh;
+     top: 50%; transform: translate(-50%, -50%); background-color: aliceblue;
+     z-index: 1000; display: flex; justify-content: center;  
+}
+.x_btn_modal_edit_dash{
+    position: absolute; right: 11; top: 9; background-color: rgb(204, 108, 108); 
+    z-index: 10000; width: 23px; height: 23px; cursor: pointer;
+    text-align: center; border-radius: 4px; border: 1px solid black;
+}
+.form_profile_user{
+    display: grid;  color: black; width: 95%; padding-bottom: 1%;
+    grid-template-columns: repeat(2, 1fr);  height: 66%; 
+    z-index: 1000; bottom: 0; position: absolute;
+}
+.submit_btn_edit_profile{
+     width: 9vw; background-color: rgb(100, 135, 225) !important; 
+     color: white !important; border-radius: 5px; height: 7.5vh !important;
+
+}
+.submit_cont_dash_edit{
+    display: flex; align-items: center; height: 11vh; justify-content: end;
+    width: 18vw;
+}
+.form_profile_user > * {
+    justify-self: center; 
+}
+.form_profile_user input{
+  border: 2px solid rgb(49, 49, 49);
+  background-color: antiquewhite; padding-left: 1%; height: 6vh;
+}
+.form_profile_user input[type='file']{
+    width: 2vw;
+}
+.pic_edit{
+    width: 100px; height: 100px;
+}
+.top_picture_flex{
+    display: flex; position: absolute;
+    left: 0; top: 0; background-color: rgb(166, 166, 166); width: 100%;
+     padding: 2%;padding-left: 8%;
+
+}
+.invisible_font{
+    color: rgba(240, 248, 255, 0);
+}
+.custom_upload{
+    width: 30px; cursor: pointer;
+}
+.error_username_dash{
+    background-color: salmon; color: white; padding-left: 1%; display: flex;
+    justify-content: center; border: 1px; padding: 1%;
+}
+.error_passwords_profile{
+    width: 16vw; display: flex; align-items: center; flex-direction: column; 
+
+}
+.errors_cont_dash_edit{
+    display: flex; flex-direction: column; justify-content: center; width: 16vw;
+    height: 11vh;
+}
